k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asi-dashboard
  labels:
    name: asi-dashboard
